force-app/main/default/objects/DmlOperationSubject__c/DmlOperationSubject__c.object-meta.xml
<CustomObject>
    <description>The primary subject (i.e., record) of a DML operation</description>
    <label>DML Operation Subject</label>
    <nameField>
        <displayFormat>DOS-{00000000}</displayFormat>
        <label>DML Operation Subject Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DML Operation Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>