force-app/main/default/objects/DmlOperationSubject__c/fields/DmlOperation__c.field-meta.xml
<CustomField>
    <fullName>DmlOperation__c</fullName>
    <description>The DML operation which operated on this subject</description>
    <inlineHelpText>The DML operation which operated on this subject</inlineHelpText>
    <label>DML Operation</label>
    <referenceTo>DmlOperation__c</referenceTo>
    <relationshipLabel>DML Operation Subjects</relationshipLabel>
    <relationshipName>DmlOperationSubjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>