force-app/main/default/objects/DmlOperationSubject__c/fields/DmlOperationType__c.field-meta.xml
<CustomField>
    <fullName>DmlOperationType__c</fullName>
    <description>The Type value from the parent DML Operation record</description>
    <inlineHelpText>The Type value from the parent DML Operation record</inlineHelpText>
    <label>DML Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DmlOperationType</valueSetName>
    </valueSet>
</CustomField>