force-app/main/default/objects/DmlOperationSubject__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>The Salesforce ID or record ID of the subject</description>
    <inlineHelpText>The Salesforce ID or record ID of the subject</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>